--- a/receptionist/templates/receptionist/appointments-list.html
+++ b/receptionist/templates/receptionist/appointments-list.html
@@ -1,4 +1,4 @@
-{% extends 'patient/patient_home.html' %}
+{% extends 'receptionist/rec_home.html' %}
 {% load static %}
 
 {% block header %}
@@ -6,19 +6,7 @@
 
 {% block content %}
 
-<section class="page-title bg-1">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block text-center">
-          <!-- <span class="text-white">Book your Seat</span> -->
-          <h1 class="text-capitalize mb-5 text-lg">Welcome Patient Name</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
 
 <section class="appoinment section">
   <div class="container">
