--- a/doctor/templates/doctor/doctor_home.html
+++ b/doctor/templates/doctor/doctor_home.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!-- All other pages extends this page -->
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -69,18 +70,8 @@
 					<ul class="navbar-nav ml-auto">
 
 						<li class="nav-item active">
-							<a class="nav-link" href="{% url 'com-home' %}">Home</a>
+							<a class="nav-link" href="{% url 'doctor: dr-home' %}">Home</a>
 						</li>
-
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="" id="dropdown03" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false"> Profile <i
-									class="icofont-thin-down"></i></a>
-							<ul class="dropdown-menu" aria-labelledby="dropdown03">
-								<li><a class="dropdown-item" href="{% url 'doctor:dr-pro' %}"> My Profile </a></li>
-								<li><a class="dropdown-item" href=""> Change Password </a></li>
-							</ul>
-						</li>						
 
 						<li class="nav-item active">
 							<a class="nav-link" href=""> Patients </a>
